--- a/css/app-main.css
+++ b/css/app-main.css
@@ -117,10 +117,10 @@ body {
 }
 
 .choice-image {
-    border: solid 7px var(--meco-accent-blue);
+    box-shadow: 0 0 0 7px var(--meco-accent-blue);
     border-radius: 100%;
     background-repeat: no-repeat;
-    transition: border 0.1s ease-in-out;
+    transition: box-shadow 0.1s ease-in-out;
 }
 
 .choice-caption {
@@ -131,17 +131,16 @@ body {
 
 .choice:hover .choice-image,
 .choice:focus .choice-image {
-    border-color: var(--meco-accent-blue);
-    border-width: 10px;
+    box-shadow: 0 0 0 10px var(--meco-accent-blue);
 }
     
-.choice-selected .choice-image {
-    border-color: var(--meco-blue-dark);
+.choice-selected .choice-image,
+.choice-selected:hover .choice-image {
+    box-shadow: 0 0 0 7px var(--meco-blue-dark);
 }
 
-.choice-selected:hover .choice-image,
 .choice-selected:focus .choice-image {
-    border-color: var(--meco-blue-dark);
+    box-shadow: 0 0 0 10px var(--meco-blue-dark);
 }
 
 /* choices-2 choices-3 choices-4*/
@@ -157,7 +156,7 @@ body {
 .choices-4 .choice-image {
     height: 200px;
     width: 200px;
-    background-size: 170px;
+    background-size: 180px;
     background-position: center, 250px;
 }
 
@@ -192,26 +191,29 @@ body {
 }
 
 .choices-6 .choice-image {
-    border-width: 5px;
+    box-shadow: 0 0 0 5px var(--meco-accent-blue);
     height: 100px;
     width: 100px;
-    background-size: 80px;
+    background-size: 90px;
     background-position: center, 150px;
 }
 
 .choices-6 .choice:hover .choice-image,
 .choices-6 .choice:focus .choice-image {
-    border-width: 7px;
+    box-shadow: 0 0 0 7px var(--meco-accent-blue);
 }
 
 .choices-6 .choice-caption {
     margin-top: 10px;
 }
 
-.choices-6 .choice-selected .choice-image {
+.choices-6 .choice-selected:hover .choice-image,
+.choices-6 .choice-selected:focus .choice-image {
     background-position: 150px, center;
+    box-shadow: 0 0 0 7px var(--meco-blue-dark);
 }
 
-.choices-6 .choice-selected:hover .choice-image {
+.choices-6 .choice-selected .choice-image {
     background-position: 150px, center;
+    box-shadow: 0 0 0 5px var(--meco-blue-dark);
 }
