--- a/css/nav.css
+++ b/css/nav.css
@@ -75,23 +75,24 @@ body {
     display: flex;
     align-items: center;
     list-style: none;
-    transform: translateX(326px);
-    transition: transform 0.5s 0.2s;
+    width: 450px;
+    transition: width 0.5s 0.2s;
 }
 
 .navigation-bar-scroll #navigation-bar-list {
-    transform: translateX(0px);
-    transition: transform 0.5s 0s;
+    width: 770px;
 }
 
 #navigation-bar-list .nav-item {
     display: flex;
     align-items: center;
     height: 80px;
-    margin-left: 20px;
 }
 
 .nav-item#services {
+    display: inline;
+    width: 200px;
+    position: relative;
     flex-direction: column;
     align-items: flex-start;
     overflow: hidden;
@@ -104,6 +105,18 @@ body {
 
 #navigation-bar-list #cta-nav {
     margin-left: 50px;
+    animation: display-none 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes display-none {
+    0% {transform: translateX(0px)}
+    50% {transform: translateX(0px)}
+    100% {transform: translateX(5000px)}
+}
+
+.nav-item {
+    flex-shrink: 0;
 }
 
 #services {
@@ -168,10 +181,17 @@ body {
     transform: rotateZ(180deg);
 }
 
+#drop-down-content {
+    position: absolute;
+    top: 80px;
+    left: 0px;
+    width: 380px;
+}
+
 .services-active #drop-down-content {
     display: none;
     padding: 20px;
-    margin-right: -200px;
+    margin-right: 0px;
     flex-direction: column;
     background-color: var(--meco-accent-blue);
     animation: opacity 0.3s;
@@ -206,8 +226,8 @@ body {
 .link {
     color: var(--meco-gray-dark);
     height:30px;
-    width: 210px;
     transition: box-shadow 0.2s;
+    margin-left: 20px;
 }
 
 .link:hover, .link:focus {
@@ -225,6 +245,20 @@ body {
     0% {transform: translateX(0px); opacity: 1;}
     50% {transform: translateX(50px); opacity: 0;}
     100% {transform: translateX(5000px); opacity: 0;}
+}
+
+.navigation-bar-scroll #navigation-bar-list {
+    transition: width 0.5s;
+}
+
+.navigation-bar-scroll #navigation-bar-list #cta-nav {
+    animation: display-flex 1s;
+    display: flex;
+}
+
+@keyframes display-flex {
+    0% {transform: translateX(0px);}
+    100% {transform: translateX(0px);}
 }
 
 .navigation-bar-scroll #cta-nav-link {
