--- a/css/app-main.css
+++ b/css/app-main.css
@@ -82,6 +82,7 @@ body {
     color: var(--meco-gray-dark);
     width: 1000px;
     text-align: center;
+    padding-top: 80px;
 }
 
 #question-description {
