--- a/css/input.css
+++ b/css/input.css
@@ -4,6 +4,24 @@
     color: red;
 }
 
+.input-label-required {
+    display: flex;
+    align-items: flex-start;
+}
+
+.input-label-required:hover::after {
+    content: 'Ce champs est requis';
+    color: red;
+    font-weight: 500;
+    font-size: 12px;
+    animation: opacity-animation 0.2s;
+}
+
+@keyframes opacity-animation {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+}
+
 /* Email */
 
 .input-label {
@@ -153,3 +171,57 @@
     margin-top: -50px;
 }
 
+/* phone */
+
+.input-phone::-webkit-outer-spin-button,
+.input-phone::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+.input-phone[type=number] {
+  -moz-appearance: textfield;
+}
+
+/*check box*/
+
+.input-check-box {
+    position: relative;
+    flex-direction: row;
+    align-items: center;
+}
+
+.input-check {
+    opacity: 0;
+    box-shadow: none;
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    z-index: 1;
+}
+
+.check-box-custom {
+    position: absolute;
+    content: '';
+    top: 8px;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    opacity: 1;
+    box-shadow: 0px 0px 0px 3px var(--meco-accent-blue);
+    background-color: var(--meco-white);
+    background-image: url("../images/graphic-elements/check-box.svg");
+    background-repeat: no-repeat;
+    background-position: 100px 100px;
+    transition: background-color 0.1s;
+}
+
+.input-check:hover + .check-box-custom,
+.input-check:focus + .check-box-custom {
+    box-shadow: 0px 0px 0px 3px var(--meco-gray-dark);
+}
+
+.input-check:checked + .check-box-custom {
+    background-color: var(--meco-accent-blue);
+    background-size: 20px;
+    background-position: center center;
+}
