faq animation 1000 + sections opacity to 0.8

--- a/css/home-main(1000).css
+++ b/css/home-main(1000).css
@@ -120,6 +120,10 @@
         margin: 0 15px;
     }
 
+    .faq-question-active {
+        padding-left: 20px;
+    }
+
     #faq-answers-list {
         width: 250px;
     }
