name-value pairs for app pages + json template

--- a/css/service-main.css
+++ b/css/service-main.css
@@ -35,6 +35,7 @@ body {
 .section-cta {
     display: flex;
     width: fit-content;
+    width: -moz-fit-content;
 }
 .section-image {
     margin-top: 50px;
