--- a/css/input.css
+++ b/css/input.css
@@ -69,12 +69,12 @@
     color: var(--meco-accent-blue);
 }
 
-.input:not(:placeholder-shown):not(:focus) {
+.input:not(:placeholder-shown):not(:focus):not(.input-drop-down) {
     color: red;
     box-shadow: 0px 0px 0px 3px red;
 }
 
-.input:valid:not(:placeholder-shown):not(:focus) {
+.input:valid:not(:placeholder-shown):not(:focus):not(.input-drop-down) {
     color: var(--meco-blue);
     box-shadow: 0px 0px 0px 3px var(--meco-blue);
 }
@@ -89,10 +89,10 @@
     transition: all 0.2s;
 }
 
-.input:valid:not(:placeholder-shown):not(:focus) + .input-hint {
+.input:valid:not(:placeholder-shown):not(:focus):not(.input-drop-down) + .input-hint {
     opacity: 0;
 }
-.input:invalid:not(:placeholder-shown):not(:focus) + .input-hint {
+.input:invalid:not(:placeholder-shown):not(:focus):not(.input-drop-down) + .input-hint {
     opacity: 1;
 }
 
