--- a/css/fonts.css
+++ b/css/fonts.css
@@ -64,6 +64,22 @@
 
 /* web */
 
+.text-card-title {
+    font-family: poppins, sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+    letter-spacing: 0.042em;
+    line-height: 30px;
+}
+
+.text-card-body {
+    font-family: bitter, sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 0.042em;
+    line-height: 24px;
+}
+
 .text-button {
     font-family: poppins, sans-serif;
     font-weight: 700;
