--- a/css/footer.css
+++ b/css/footer.css
@@ -9,6 +9,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    height: 100%;
+    padding: 0 50px;
 }
 
 #logo-footer {
