--- a/css/home-main(1000).css
+++ b/css/home-main(1000).css
@@ -3,25 +3,51 @@
 @media screen and (max-width: 1100px) {
     
     .content-box-page-section {
-     max-width: 800px;
-     height: 450px;
+        max-width: 800px;
+        padding: 50px 50px;
+    }
+
+    #content-box-heading {
+        padding-top: 130px;
     }
 
     #page-heading {
         background-size: 100px;
     }
 
-    .page-section#faq-section {
-        height: 100%;
-    }
-
     .page-section#page-footer {
         height: 200px;
     }
 
+    #heading-title, #heading-body {
+        margin-bottom: 30px;
+    }
+
     .section-title {
         max-width: 600px;
+        margin-bottom: 30px;
     }
+
+    .text-card-title {
+        margin: 10px 0;
+    }
+
+    .services-section-list-item-description {
+        margin-bottom: 10px;
+    }
+
+    #values-intro-house {
+        height: 150px;
+        margin-top: 50px;
+        margin-bottom: -200px;
+    }
+
+    #values-intro-circle {
+        width: 400px;
+        margin-bottom: -250px;
+    }
+
+    /* fonts */
     
     .text-page-title {
         font-weight: 800;
@@ -59,6 +85,22 @@
         font-size: 16px;
         letter-spacing: 0.032em;
         line-height: 24px;
+    }
+
+    .text-card-title {
+        font-family: poppins, sans-serif;
+        font-weight: 700;
+        font-size: 16px;
+        letter-spacing: 0.032em;
+        line-height: 26px;
+    }
+
+    .text-card-body {
+        font-family: bitter, sans-serif;
+        font-weight: 500;
+        font-size: 14px;
+        letter-spacing: 0.035em;
+        line-height: 20px;
     }
     
     .text-clickable {
@@ -130,10 +172,6 @@
 
     #faq-box {
         height: 270px;
-    }
-
-    #faq-title {
-        margin-bottom: 30px;
     }
 
     #reviews-list {
