--- a/css/home-main(1000).css
+++ b/css/home-main(1000).css
@@ -3,7 +3,7 @@
 @media screen and (max-width: 1100px) {
     
     .content-box-page-section {
-        max-width: 800px;
+        margin: 0 100px;
         padding: 50px 50px;
     }
 
