--- a/css/home-main.css
+++ b/css/home-main.css
@@ -91,18 +91,20 @@ body {
 #values-list, #services-section-list {
     display: flex;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
     width: 100%;
 }
 
 .values-list-item, .services-section-list-item {
     flex-basis: 30%;
+    min-width: 200px;
     flex-shrink: 0;
     flex-grow: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 20px 5px;
 }
 
 .values-list-item-title, .values-list-item-description, .services-section-list-item-title, .services-section-list-item-description {
