--- a/css/home-main.css
+++ b/css/home-main.css
@@ -141,7 +141,8 @@ body {
 #faq-box {
     display: flex;
     background-color: var(--meco-white);
-    height: 410px;
+    width: 100%;
+    position: relative;
 }
 
 #faq-title {
@@ -152,30 +153,42 @@ body {
     display: flex;
     flex-direction: column;
     border-right: solid 3px var(--meco-blue-light);
+    width: 65%;
+    height: fit-content;
+    height: -moz-fit-content;
+    padding: 0 25px;
 }
 
 .faq-question {
-    padding: 15px 10px;
-    width: 600px;
-    margin: 0 25px;;
+    display: flex;
+    align-items: center;
+    padding: 15px;
+    width: 100%;
     color: var(--meco-gray);
-    border-bottom: solid 1px var(--meco-blue-light);
     cursor: pointer;
-    transition: all 0.2s ease-out;
+    position: relative;
 }
 
-#faq-question-5 {
-    border: none;
+.faq-question:not(:last-child)::after {
+    position: absolute;
+    content: '';
+    height: 0;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    border-bottom: solid 1px var(--meco-blue-light);
 }
 
 .faq-question-arrow {
     display: inline-flex;
+    flex-shrink: 0;
     background-image: url("../images/graphic-elements/list-item-arrow-not-active.svg"), url("../images/graphic-elements/list-item-arrow-active.svg");
     background-repeat: no-repeat;
     background-size: 10px;
-    width: 10px;
+    width: 15px;
     height: 15px;
-    margin-left: 10px;
+    margin-right: 15px;
+    transition: all 0.2s ease-out;
 }
 
 .faq-question:hover, .faq-question:focus {
@@ -183,26 +196,26 @@ body {
 }
 
 .faq-question-active {
-    color: var(--meco-blue-dark);
     cursor: default;
-    padding-left: 30px;
+}
+
+.faq-question-active .question-body {
+    color: var(--meco-blue-dark);
 }
 
 .faq-question-active .faq-question-arrow {
     background-image: url("../images/graphic-elements/list-item-arrow-active.svg");
-}
-
-#faq-answers-list {
-    display: flex;
-    flex-direction: column;
-    width: 400px;
-    overflow-y: scroll;
+    transform: translateX(5px);
 }
 
 .faq-answer {
+    position: absolute;
+    top: 0;
+    left: 65%;
     display: none;
-    width: 100%;
-    padding: 20px;
+    overflow-y: scroll;
+    width: 35%;
+    padding: 15px;
     color: var(--meco-blue-dark);
 }
 
