--- a/css/nav.css
+++ b/css/nav.css
@@ -76,12 +76,9 @@ body {
     display: flex;
     align-items: center;
     list-style: none;
-    width: 450px;
+    width: fit-content;
+    width: -moz-fit-content;
     transition: width 0.5s 0.2s;
-}
-
-.navigation-bar-scroll #navigation-bar-list {
-    width: 770px;
 }
 
 #navigation-bar-list .nav-item {
@@ -91,8 +88,7 @@ body {
 }
 
 .nav-item#services {
-    display: inline;
-    width: 200px;
+    display: flex;
     position: relative;
     flex-direction: column;
     align-items: flex-start;
@@ -105,23 +101,12 @@ body {
 }
 
 #navigation-bar-list #cta-nav {
-    margin-left: 50px;
-    animation: display-none 1s;
-    animation-fill-mode: forwards;
-}
-
-@keyframes display-none {
-    0% {transform: translateX(0px)}
-    50% {transform: translateX(0px)}
-    100% {transform: translateX(5000px)}
+    display: flex;
+    margin-left: 40px;
 }
 
 .nav-item {
     flex-shrink: 0;
-}
-
-#services {
-    width: 200px;
 }
 
 #services-link {
@@ -131,7 +116,7 @@ body {
     justify-content: center;
     box-sizing: content-box;
     height: 80px;
-    width: 200px;
+    padding: 0 20px;
     transition: box-shadow 0.2s, background-color 0.3s;
 }
 
@@ -150,7 +135,6 @@ body {
 #services-title {
     display: flex;
     align-items: center;
-    height: 80px;
 }
 
 .drop-down-title {
@@ -186,12 +170,17 @@ body {
     position: absolute;
     top: 80px;
     left: 0px;
-    width: 380px;
+    width: fit-content;
+    width: -moz-fit-content;
+}
+
+.drop-down-item {
+    width: max-content;
 }
 
 .services-active #drop-down-content {
     display: none;
-    padding: 20px;
+    padding: 20px 30px;
     margin-right: 0px;
     flex-direction: column;
     background-color: var(--meco-accent-blue);
@@ -209,10 +198,10 @@ body {
 }
 
 .drop-down-item-link {
-    text-indent: 40px;
+    text-indent: 30px;
     background-image: url("../images/graphic-elements/list-item-arrow.svg"), url("../images/graphic-elements/list-item-arrow-hover.svg");
     background-size: 10px;
-    background-position: 15px;
+    background-position: 0 center;
     background-repeat: no-repeat;
     color: var(--meco-gray-dark);
     transition: background-position 0.3s;
@@ -220,7 +209,7 @@ body {
 
 .drop-down-item-link:hover, .drop-down-item-link:focus {
     background-image: url("../images/graphic-elements/list-item-arrow-hover.svg");
-    background-position: 20px;
+    background-position: 5px center;
     color: var(--meco-blue-dark);
 }
 
@@ -231,38 +220,24 @@ body {
 #cta-nav-link {
     cursor: default;
     opacity: 0;
-    animation: cta-translate-right 0.4s;
+}
+
+.cta-nav-link-after-scroll {
+    animation: cta-translate-right 0.2s;
 }
 
 @keyframes cta-translate-right {
     0% {transform: translateX(0px); opacity: 1;}
-    50% {transform: translateX(50px); opacity: 0;}
-    100% {transform: translateX(5000px); opacity: 0;}
-}
-
-.navigation-bar-scroll #navigation-bar-list {
-    transition: width 0.5s;
-}
-
-.navigation-bar-scroll #navigation-bar-list #cta-nav {
-    animation: display-flex 1s;
-    display: flex;
-}
-
-@keyframes display-flex {
-    0% {transform: translateX(0px);}
-    100% {transform: translateX(0px);}
+    100% {transform: translateX(50px); opacity: 0;}
 }
 
 .navigation-bar-scroll #cta-nav-link {
     cursor: pointer;
-    transform: translateX(0px);
-    opacity: 100%;
-    animation: cta-translate-left 0.4s;
+    animation: cta-translate-left 0.2s 0.5s;
+    animation-fill-mode: forwards;
 }
 
 @keyframes cta-translate-left {
-    0% {transform: translateX(5000px); opacity: 0;}
-    50% {transform: translateX(50px); opacity: 0;}
+    0% {transform: translateX(50px); opacity: 0;}
     100% {transform: translateX(0px); opacity: 1;}
 }
