--- a/css/footer.css
+++ b/css/footer.css
@@ -24,8 +24,9 @@
 }
 
 #footer-list .important-link {
+    display: flex;
     color: var(--meco-white);
-    margin: 0 20px;
+    margin: 5px 20px;
     transition: all 0.1s;
 }
 
