--- a/css/home-main(830).css
+++ b/css/home-main(830).css
@@ -2,6 +2,10 @@
 
 @media screen and (max-width: 830px) {
 
+    #page-heading {
+        background-image: none;
+    }
+
     .content-box-page-section {
         padding: 50px 20px;
     }
@@ -10,7 +14,7 @@
         width: 100%;
     }
 
-    .faq-answer {
+    .faq-answer-active {
         position: relative;
         width: 100%;
         max-height: 0;
@@ -18,7 +22,7 @@
         padding: 0 15px;
         overflow-y: hidden;
         background-color: var(--meco-accent-blue);
-        animation: show-answer 0.5s;
+        animation: show-answer 0.7s;
         animation-fill-mode: forwards;
     }
 
@@ -32,5 +36,20 @@
     }
     .faq-answer:last-child {
         margin-bottom: 20px;
+    }
+
+    #newsletter-form {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #email-input-box {
+        width: 100%;
+        max-width: 600px;
+    }
+
+    #newsletter-email-input {
+        width: 100%;
     }
 }
