--- a/css/nav.css
+++ b/css/nav.css
@@ -72,6 +72,12 @@ body {
     transition: transform 0.3s;
 }
 
+#icon-nav-link,
+#burger,
+#menu-overlay {
+    display: none;
+}
+
 #navigation-bar-list {
     display: flex;
     align-items: center;
