--- a/css/home-main(1000).css
+++ b/css/home-main(1000).css
@@ -144,10 +144,7 @@
     }
 
     .reviews-list-item-body {
-        width: 100%;
-        background-size: 25px, 25px, 50px, 50px;
-        background-position-x: 20px, 455px, left, right;
-        background-position-y: 20px, 145px, bottom, top;
+        background-size: 40px;
     }
 
     .top-stars {
