about page + services-pages 830

--- a/css/about-main.css
+++ b/css/about-main.css
@@ -66,6 +66,10 @@
     font-weight: bold;
 }
 
+.value-description {
+    color: var(--meco-blue-dark);
+}
+
 /* mission & vision */
 
 #content-box-mission {
