--- a/css/nav(830).css
+++ b/css/nav(830).css
@@ -1,4 +1,4 @@
-/* second breakpoint 1100px width */
+/* second breakpoint 830x width */
 
 @media screen and (max-width: 830px) {
 
@@ -101,7 +101,7 @@
     }
 
     #about-link {
-        box-shadow: var(--meco-blue) 0 5px;
+        box-shadow: 0 7px 0 -2px var(--meco-blue);
     }
 
     .nav-item:not(:last-child)::after {
@@ -146,7 +146,7 @@
         height: 30px;
         margin: 0 20px;
         text-indent: 0;
-        box-shadow: var(--meco-blue) 0 5px;
+        box-shadow: 0 7px 0 -2px var(--meco-blue);
     }
 
     .drop-down-item:not(:last-child)::after {
