--- a/css/app-main.css
+++ b/css/app-main.css
@@ -1,6 +1,7 @@
 
 body {
-    height: 100vh;
+    display: flex;
+    min-height: 100vh;
     background-image: url(../images/patterns/arrow-pattern-light.svg);
     background-size: 150px;
     overflow-x: hidden;
@@ -14,17 +15,23 @@ body {
     position: relative;
 }
 
+#logo-nav {
+    margin: 0;
+}
+
 #wizard {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100%;
+    flex-grow: 1;
 }
 
 #content-box-wizard {
-    width: 1300px;
+    max-width: 1300px;
     height: 100%;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -38,30 +45,36 @@ body {
 }
 
 #questions-box {
-    width: 100%;
+    width: 100vw;
     height: 100%;
+    padding: 20px;
     display: flex;
+    flex-grow: 1;
     align-items: center;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 #buttons-box {
-    width: 800px;
+    width: 100%;
+    max-width: 800px;
     height: 60px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
+    padding: 0 20px;
     display: flex;
     align-items: center;
 }
 
 #between-buttons {
     height: 100%;
+    min-width: 20px;
     flex-grow: 1;
 }
 
 #choices-container {
     height: 100%;
     width: 100%;
+    margin-top: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -69,24 +82,20 @@ body {
 
 #question-title {
     color: var(--meco-gray-dark);
-    width: 1000px;
+    max-width: 1000px;
     text-align: center;
-    margin: 20px 0;
+    margin-bottom: 20px;
 }
 
 #question-description {
     color: var(--meco-gray-dark);
-    width: 1000px;
+    max-width: 1000px;
     text-align: center;
 }
 
 #progress {
     height: 100%;
     background-color: var(--meco-blue);
-    background-image: url(../images/graphic-elements/progress-arrow.svg);
-    background-repeat: no-repeat;
-    background-size: 11px;
-    background-position-x: right;
     transition: all 0.5s;
 }
 
@@ -96,7 +105,7 @@ body {
     display: flex;
     align-items: flex-start;
     justify-content: space-evenly;
-    width: 1000px;
+    max-width: 1000px;
 }
 
 .choice {
@@ -137,18 +146,29 @@ body {
 /* choices-2 choices-3 choices-4*/
 
 .choices-2 .choice,
-.choices-3 .choice,
+.choices-3 .choice {
+    min-width: 230px;
+    max-width: 300px;
+}
+
 .choices-4 .choice {
+    padding: 10px;
+    min-width: 200px;
     max-width: 250px;
 }
 
 .choices-2 .choice-image,
 .choices-3 .choice-image,
 .choices-4 .choice-image {
-    height: 200px;
-    width: 200px;
-    background-size: 180px;
+    padding-top: 180px;
+    width: 180px;
+    background-size: 90%;
     background-position: center, 250px;
+}
+
+.choices-4 .choice-image {
+    padding-top: 150px;
+    width: 150px;
 }
 
 .choices-2 .choice-selected .choice-image,
@@ -169,16 +189,19 @@ body {
     line-height: 24px;
 }
 
+.choices-4 .choices-box {
+    flex-wrap: wrap;
+}
+
 /* choices-6 */
 
 .choices-6 .choices-box {
+    max-width: 600px;
     flex-wrap: wrap;
-    padding: 0 100px;
 }
 .choices-6 .choice {
-    flex-basis: 25%;
-    margin: 0 30px;
-    padding: 10px 0;
+    min-width: 30%;
+    padding: 10px;
 }
 
 .choices-6 .choice-image {
@@ -218,13 +241,16 @@ body {
 .pop-up-visible {
     display: flex;
     position: fixed;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     top: 0;
     left: 0;
     z-index: 1;
     background-color: rgba(41, 41, 102, 0.8);
     height: 100%;
     width: 100%;
-    padding: 5% 10%;
+    padding: 20px;
     animation: pop-up-reveal 0.3s ease-out;
 }
 
@@ -241,7 +267,9 @@ body {
     position: relative;
     height: 100%;
     width: 100%;
-    padding: 50px 100px;
+    max-width: 800px;
+    max-height: 600px;
+    padding: 20px;
     background-color: var(--meco-white);
 }
 
@@ -296,7 +324,6 @@ body {
     width: 100%;
     align-items: center;
     justify-content: center;
-    padding: 0 50px;
 }
 
 .info-box {
