--- a/css/input.css
+++ b/css/input.css
@@ -22,12 +22,19 @@
     opacity: 1;
 }
 
+/* input-text */
+
+.input-text {
+    max-width: 540px;
+}
+
 /* input-multiple */
 
 .input-multiple-choice,
 .input-multiple-choice .choices-box,
 .input-multiple-form {
     height: 100%;
+    width: 100%;
 }
 
 .input-multiple-form {
@@ -49,13 +56,16 @@
 .input-box {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    max-width: 540px;
+    margin: 0 auto;
 }
 
 .input {
     box-shadow: 0px 0px 0px 3px var(--meco-accent-blue);
     border: none;
     color: var(--meco-gray-dark);
-    width: 540px;
+    width: 100%;
     height: 50px;
     text-indent: 20px;
 }
@@ -128,7 +138,7 @@
 }
 
 .input-increment {
-    width: 200px;
+    max-width: 200px;
     text-align: center;
     text-indent: 0;
     margin: 0 20px;
@@ -136,6 +146,7 @@
 
 .input-increment-arrow {
     display: flex;
+    flex-shrink: 0;
     border-radius: 50%;
     height: 50px;
     width: 50px;
@@ -179,9 +190,16 @@
     background-position:  -30px, center right;
 }
 
-.input-drop-down-choice {
+.input-drop-down-form,
+.input-multiple-form,
+.input-number-form {
+    width: 100%;
+}
+
+.input-drop-down-choice,
+.input-number-choice {
     font-weight: 500;
-    padding-left: 20px;
+    width: 100%;
 }
 
 .input-drop-down-group option {
@@ -213,8 +231,12 @@
     box-shadow: none;
     width: 20px;
     height: 20px;
-    margin-right: 10px;
     z-index: 1;
+    flex-shrink: 0;
+}
+
+#user-check-input-label {
+    padding-left: 10px;
 }
 
 .check-box-custom {
