--- a/css/app-main.css
+++ b/css/app-main.css
@@ -45,6 +45,7 @@ body {
 }
 
 #questions-box {
+    z-index: 1;
     width: 100vw;
     height: 100%;
     padding: 20px;
@@ -106,6 +107,7 @@ body {
     align-items: flex-start;
     justify-content: space-evenly;
     max-width: 1000px;
+    margin: 0 auto;
 }
 
 .choice {
@@ -244,12 +246,12 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    top: 0;
+    top: -80px;
     left: 0;
     z-index: 1;
     background-color: rgba(41, 41, 102, 0.8);
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     padding: 20px;
     animation: pop-up-reveal 0.3s ease-out;
 }
@@ -267,7 +269,7 @@ body {
     position: relative;
     height: 100%;
     width: 100%;
-    max-width: 800px;
+    max-width: 900px;
     max-height: 600px;
     padding: 20px;
     background-color: var(--meco-white);
@@ -345,4 +347,48 @@ body {
 .info-box-body {
     color: var(--meco-blue-dark);
     text-align: center;
+}
+
+.questions-box-disappear-right {
+    animation: questions-box-disappear-right 0.5s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-in;
+}
+
+.questions-box-appear-right {
+    animation: questions-box-appear-right 0.5s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-out;
+}
+
+.questions-box-disappear-left {
+    animation: questions-box-disappear-left 0.5s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-in;
+}
+
+.questions-box-appear-left {
+    animation: questions-box-appear-left 0.5s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-out;
+}
+
+@keyframes questions-box-disappear-right {
+    0% {opacity: 1; transform: translateX(0px);}
+    100% {opacity: 0; transform: translateX(-100px);}
+}
+
+@keyframes questions-box-appear-right {
+    0% {opacity: 0; transform: translateX(100px);}
+    100% {opacity: 1; transform: translateX(0px);}
+}
+
+@keyframes questions-box-disappear-left {
+    0% {opacity: 1; transform: translateX(0px);}
+    100% {opacity: 0; transform: translateX(100px);}
+}
+
+@keyframes questions-box-appear-left {
+    0% {opacity: 0; transform: translateX(-100px);}
+    100% {opacity: 1; transform: translateX(0px);}
 }
