--- a/css/app-main(860).css
+++ b/css/app-main(860).css
@@ -20,6 +20,14 @@
         line-height: 24px;
     }
 
+    .text-big-body {
+        font-family: bitter, sans-serif;
+        font-weight: 500;
+        font-size: 20px;
+        letter-spacing: 0.042em;
+        line-height: 36px;
+    }
+
     .choice-caption {
         font-size: 16px;
     }
