--- a/css/home-main(830).css
+++ b/css/home-main(830).css
@@ -23,7 +23,7 @@
         left: 0;
         padding: 0 15px;
         overflow-y: hidden;
-        background-color: var(--meco-accent-blue);
+        background-color: var(--meco-blue-light);
         animation: show-answer 0.7s;
         animation-fill-mode: forwards;
     }
@@ -55,8 +55,8 @@
     }
 
     @keyframes show-answer {
-        0% {max-height: 0}
-        100% {max-height: 2000px; padding: 15px;}
+        0% {max-height: 0; opacity: 0;}
+        100% {max-height: 2000px; padding: 15px; opacity: 1;}
     }
 
     .faq-question-active .faq-question-arrow {
