--- a/css/home-main(830).css
+++ b/css/home-main(830).css
@@ -6,7 +6,7 @@
         background-image: none;
     }
 
-    .content-box-page-section {
+    .page-section .content-box-page-section:not(#content-box-footer) {
         padding: 50px 20px;
     }
 
