--- a/css/input.css
+++ b/css/input.css
@@ -249,19 +249,26 @@
     opacity: 1;
     box-shadow: 0px 0px 0px 3px var(--meco-accent-blue);
     background-color: var(--meco-white);
-    background-image: url("../images/graphic-elements/check-box.svg");
+    background-image: url("../images/graphic-elements/check-box-hover.svg"), url("../images/graphic-elements/check-box-checked.svg");
     background-repeat: no-repeat;
-    background-position: 100px 100px;
-    transition: background-color 0.1s;
+    background-position: 100px 100px, 100px 100px;
+    background-size: 20px;
 }
 
-.input-check:hover + .check-box-custom,
-.input-check:focus + .check-box-custom {
-    box-shadow: 0px 0px 0px 3px var(--meco-gray-dark);
+.input-check:hover + .check-box-custom {
+    background-position: center center, 100px 100px;
 }
 
 .input-check:checked + .check-box-custom {
-    background-color: var(--meco-accent-blue);
-    background-size: 20px;
-    background-position: center center;
+    background-position: 100px 100px, center center;
+    box-shadow: 0px 0px 0px 3px var(--meco-blue);
+}
+
+.input-check:focus + .check-box-custom {
+    box-shadow: 0px 0px 0px 3px var(--meco-gray-dark);
+    background-position: center center, 100px 100px;
+}
+
+.input-check:checked:focus + .check-box-custom {
+    background-position: 100px 100px, center center;
 }
