json data to html + send to php

--- a/css/about-main(830).css
+++ b/css/about-main(830).css
@@ -2,7 +2,7 @@
 
 @media screen and (max-width: 830px) {
 
-    .content-box-page-section {
+    .content-box-page-section:not(#content-box-footer) {
         padding: 20px;
     }
 
