--- a/css/sections.css
+++ b/css/sections.css
@@ -107,6 +107,7 @@
     position: absolute;
     top: 40px;
     left: 40px;
+    background-image: url(../images/patterns/arrow-blue-pattern.svg);
     background-size: 150px;
     box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.5);
     width: 300px;
