--- a/css/sections.css
+++ b/css/sections.css
@@ -110,8 +110,8 @@
     background-image: url(../images/patterns/arrow-blue-pattern.svg);
     background-size: 150px;
     box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.5);
-    width: 300px;
-    height: 300px;
+    width: 600px;
+    height: 400px;
 }
 
 #page-chauffage .section-image::before {
@@ -130,10 +130,12 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 300px;
-    width: 300px;
-    border: solid 2px var(--meco-accent-blue);
-    background-color: var(--meco-white);
+    height: 400px;
+    width: 600px;
+    /* border: solid 2px var(--meco-accent-blue); */
+    background-image: var(--meco-off-white);
     background-repeat: no-repeat;
     background-position: center;
 }
+
+
